--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@anvos/agentify-components",
   "version": "0.0.1",
   "description": "A framework for agentifying UI components with semantic metadata for AI agents",
-  "main": "src/index.js",
+  "main": "src/index.ts",
   "scripts": {
     "start": "node examples/simple-app/index.js",
     "test": "echo 'Tests coming soon!'",
@@ -10,7 +10,7 @@
     "generate-mcp": "node scripts/generate-mcp-config.js"
   },
   "dependencies": {
-    "react": "^18.2.0"
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0"
   },
   "peerDependencies": {
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
@@ -25,5 +25,8 @@
     "metadata"
   ],
   "author": "Anvos",
-  "license": "MIT"
-} 
+  "license": "MIT",
+  "devDependencies": {
+    "@types/react": "^19.0.10"
+  }
+}
