--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
     "outDir": "dist",
     "sourceMap": true
   },
-  "include": ["src"],
+  "include": ["src", "examples"],
   "exclude": ["node_modules", "dist", "examples"]
 } 
