--- a/package.json
+++ b/package.json
@@ -23,11 +23,16 @@
     "agents",
     "ai",
     "hoc",
-    "metadata"
+    "metadata",
+    "typescript",
+    "mcp",
+    "server"
   ],
   "author": "Anvos",
   "license": "MIT",
   "devDependencies": {
-    "@types/react": "^19.0.10"
+    "@types/react": "^19.0.10",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.2"
   }
 }
